--- a/sde_design/skin6/index.html
+++ b/sde_design/skin6/index.html
@@ -74,6 +74,75 @@
 	</ul>
 </div>
 
+<div module="product_listmain_2">
+	<!--@css(/css/module/product/3245/listmain_2.css)-->
+	<!--
+		$count = 12
+		$basket_result = /product/add_basket.html
+		$basket_option = /product/basket_option.html
+	-->
+	<div class="mh_main_product">
+		<div class="mh_main_product_header"><img src="/image/main/title_shopping.png" alt="쇼핑타이틀" /></div>
+		<ul class="prdList column3">
+			<li class="item" id="anchorBoxId_{$product_no}">
+				<div class="box">
+					<p class="prdImg">
+						<a href="/product/detail.html{$param}" name="anchorBoxName_{$product_no}"><img src="{$image_big}" id="{$image_big_id}" alt="" class="thumb" />
+							<span class="sp-product-imagestyle" module="product_Imagestyle">
+                                <span class="prdIcon {$icon_class_name}" style="background-image:url('{$icon_url}');"></span>
+                            </span>
+						</a>
+					</p>
+					<!--
+					<div class="status">
+						<div class="icon">{$soldout_icon} {$recommend_icon} {$new_icon} {$product_icons} {$benefit_icons}</div>
+						<div class="button">
+							<div class="likeButton {$disp_likeprd_class}"><button type="button">{$disp_likeprd_icon}<strong>{$disp_likeprd_count}</strong></button></div>
+							<div class="option">{$option_preview_icon}</div> {$basket_icon}
+						</div>
+					</div>
+					-->
+					<p class="name">
+						<strong><a href="/product/detail.html{$param}" class="{$product_name_display|display}"><span class="title {$product_name_title_display|display}">{$product_name_title} :</span> {$product_name}</a></strong>
+					</p>
+					<ul module="product_ListItem">
+						<li class="{$item_display|display}">{$item_content}</li>
+						<li class="{$item_display|display}"><strong class="title {$item_title_display|display}">{$item_title} :</strong> {$item_content}</li>
+					</ul>
+				</div>
+			</li>
+			<li class="item" id="anchorBoxId_{$product_no}">
+				<div class="box">
+					<p class="prdImg">
+						<a href="/product/detail.html{$param}" name="anchorBoxName_{$product_no}">
+							<img src="{$image_big}" id="{$image_big_id}" alt="" class="thumb" />
+							<span class="sp-product-imagestyle" module="product_Imagestyle">
+                                <span class="prdIcon {$icon_class_name}" style="background-image:url('{$icon_url}');"></span>
+                            </span>
+						</a>
+					</p>
+					<!--
+					<div class="status">
+						<div class="icon">{$soldout_icon} {$recommend_icon} {$new_icon} {$product_icons} {$benefit_icons}</div>
+						<div class="button">
+							<div class="likeButton {$disp_likeprd_class}"><button type="button">{$disp_likeprd_icon}<strong>{$disp_likeprd_count}</strong></button></div>
+							<div class="option">{$option_preview_icon}</div> {$basket_icon}
+						</div>
+					</div>
+					-->
+					<p class="name">
+						<strong><a href="/product/detail.html{$param}" class="{$product_name_display|display}"><span class="title {$product_name_title_display|display}">{$product_name_title} :</span> {$product_name}</a></strong>
+					</p>
+					<ul module="product_ListItem">
+						<li class="{$item_display|display}">{$item_content}</li>
+						<li class="{$item_display|display}"><strong class="title {$item_title_display|display}">{$item_title} :</strong> {$item_content}</li>
+					</ul>
+				</div>
+			</li>
+		</ul>
+	</div>
+</div>
+
 <div module="product_listmain_1">
     <!--@css(/css/module/product/3245/listmain_1.css)-->
     <!--
