--- a/sde_design/mobile1/index.html
+++ b/sde_design/mobile1/index.html
@@ -22,7 +22,7 @@
 	<ul class="eventclip">
         <!-- onclick="return false;" -->
 		<li>
-            <a href="http://shop1.moonhillfd.cafe24.com/article/event/8/1705/"index.html><img src="/image/main/eventclip_light.jpg" alt="eventclip" /></a>
+            <a href="https://moonhillfood.com/article/event/8/1710/"><img src="/image/main/eventclip_ssum.jpg" alt="eventclip" /></a>
 		</li>
 		<li>
             <a class="review" href="https://moonhillfood.com/article/event/8/1432/"><img src="/image/main/eventclip_review.jpg" alt="eventclip" /></a>
