--- a/sde_design/skin6/index.html
+++ b/sde_design/skin6/index.html
@@ -60,7 +60,7 @@
 	<ul class="eventclip">
 		<!-- onclick="return false;" -->
 		<li class="full">
-			<a href="http://shop1.moonhillfd.cafe24.com/article/event/8/1705/"><img src="/image/main/eventclip_light.jpg" alt="eventclip" /></a>
+			<a href="https://moonhillfood.com/article/event/8/1710/"><img src="/image/main/eventclip_ssum.jpg" alt="eventclip" /></a>
 		</li>
 		<li>
 			<a href="https://moonhillfood.com/article/event/8/1432/"><img src="/image/main/eventclip_review.jpg" alt="eventclip" /></a>
@@ -75,14 +75,14 @@
 </div>
 
 <div module="product_listmain_2">
-	<!--@css(/css/module/product/3245/listmain_2.css)-->
+	<!--@css(/css/module/product/3245/listmain_1.css)-->
 	<!--
 		$count = 12
 		$basket_result = /product/add_basket.html
 		$basket_option = /product/basket_option.html
 	-->
 	<div class="mh_main_product">
-		<div class="mh_main_product_header"><img src="/image/main/title_shopping.png" alt="쇼핑타이틀" /></div>
+		<div class="mh_main_product_header"><img src="/image/main/title_mdspick.png" alt="엠디추천" /></div>
 		<ul class="prdList column3">
 			<li class="item" id="anchorBoxId_{$product_no}">
 				<div class="box">
